update css to fix ui spacing

--- a/css/userChrome.css
+++ b/css/userChrome.css
@@ -61,11 +61,8 @@
     width: 0.5px}
 :root {--urlbar-container-padding: 0px !important;}
 #toolbar-menubar {
-  margin-top: -1px !important;
-  margin-bottom: -1px !important;
-  padding-top: -2px !important;
-  padding-bottom: -2px !important;}
-#TabsToolbar{margin-bottom: -2px !important;}
+  margin-top: -1.4px !important;}
+#TabsToolbar{margin-bottom: -1px !important;}
 .urlbar-input-container{border-radius: 4px !important;}
 /* END */
 
@@ -134,4 +131,5 @@
 }
 
 /********************** END **********************/
+
 
